fix dark mode blockquote style

--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@
 
 blockquote {
 	font-style: italic;
-	background: #f9f9f9;
 	border-left: 5px solid #a00;
 	margin: 1.5em 10px;
 	padding: 0.5em 10px;
